--- a/kubernetes/apps/default/whoami/app/pvc.yaml
+++ b/kubernetes/apps/default/whoami/app/pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: whoami-test
-  namespace: networking
+  namespace: default
   annotations:
     nfs.io/storage-path: "test"
 spec:
@@ -11,5 +11,5 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
+      storage: 1Gi
   storageClassName: nfs-provisioner
