--- a/kubernetes/apps/default/whoami/app/helm-release.yaml
+++ b/kubernetes/apps/default/whoami/app/helm-release.yaml
@@ -33,11 +33,11 @@ spec:
         ports:
           http:
             port: 80
-    persistence:
-      config:
-        enabled: true
-        existingClaim: whoami-test
-        mountPath: /testing
+    # persistence:
+    #   config:
+    #     enabled: true
+    #     existingClaim: whoami-test
+    #     mountPath: /testing
     # ingress:
     #   main:
     #     enabled: true
