--- a/kubernetes/apps/default/storage/ks.yaml
+++ b/kubernetes/apps/default/storage/ks.yaml
@@ -1,15 +1,34 @@
+# apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# kind: Kustomization
+# metadata:
+#   name: default-storage
+#   namespace: flux-system
+# spec:
+#   path: ./kubernetes/apps/default/storage/app
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
+#   interval: 30m
+#   prune: false
+#   wait: true
+#   dependsOn:
+#     - name: nfs-system-nfs-provisioner
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: default-storage
+  name: cluster-apps-default-storage-app
   namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/enabled: "true"
 spec:
   path: ./kubernetes/apps/default/storage/app
+  prune: false
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: home-kubernetes
   interval: 30m
-  prune: false
-  wait: true
+  retryInterval: 1m
+  timeout: 5m
   dependsOn:
     - name: nfs-system-nfs-provisioner
