--- a/kubernetes/apps/default/whoami/app/helm-release.yaml
+++ b/kubernetes/apps/default/whoami/app/helm-release.yaml
@@ -33,11 +33,16 @@ spec:
         ports:
           http:
             port: 80
-    persistence:
-      config:
-        enabled: true
-        existingClaim: test
-        mountPath: /testing
+
+    volumeMounts:
+      - mountPath: /nfs-test
+        name: testing
+  volumes:
+    - name: testing
+      nfs:
+        server: 192.168.1.2
+        path: /volume1/network-storage
+        readOnly: true
     # ingress:
     #   main:
     #     enabled: true
