--- a/kubernetes/apps/default/weave-gitops/app/helmrelease.yaml
+++ b/kubernetes/apps/default/weave-gitops/app/helmrelease.yaml
@@ -74,6 +74,10 @@ spec:
       impersonationResourceNames: ["admin"]
     podAnnotations:
       secret.reloader.stakater.com/reload: weave-gitops-secret
+  persistence:
+    data:
+      enabled: true
+      existingClaim: nfs-data-pvc
   valuesFrom:
     - kind: Secret
       name: weave-gitops-secret
