--- a/kubernetes/apps/default/filebrowser/ks.yaml
+++ b/kubernetes/apps/default/filebrowser/ks.yaml
@@ -2,19 +2,19 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: whoami
+  name: filebrowser
   namespace: flux-system
   labels:
     substitution.flux.home.arpa/enabled: "true"
 spec:
-  path: ./kubernetes/apps/default/whoami/app
+  path: ./kubernetes/apps/default/filebrowser/app
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: whoami
+      name: filebrowser
       namespace: default
   prune: true
   wait: true
