--- a/kubernetes/apps/default/storage/app/pvc.yaml
+++ b/kubernetes/apps/default/storage/app/pvc.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-data
-  namespace: default
+  name: appdata
+  #namespace: default
 spec:
   #storageClassName: data
   capacity:
@@ -21,16 +21,16 @@ spec:
     - hard
     - noatime
     - nodiratime
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: nfs-data-pvc
-#   namespace: default
-# spec:
-#   accessModes:
-#     - ReadWriteMany
-#   #storageClassName: data
-#   resources:
-#     requests:
-#       storage: 1Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: appdata-pvc
+  namespace: default
+spec:
+  accessModes:
+    - ReadWriteMany
+  #storageClassName: data
+  resources:
+    requests:
+      storage: 1Mi
