--- a/kubernetes/apps/default/storage/app/pvc.yaml
+++ b/kubernetes/apps/default/storage/app/pvc.yaml
@@ -1,39 +1,39 @@
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: appdata
-  #namespace: default
-spec:
-  storageClassName: data
-  capacity:
-    storage: 1Mi
-  accessModes:
-    - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  nfs:
-    server: 192.168.1.2
-    path: "/volume1/network-storage"
-  mountOptions:
-    - nfsvers=4.2
-    - tcp
-    - intr
-    - hard
-    - noatime
-    - nodiratime
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: appdata-pvc
-  namespace: default
-spec:
-  accessModes:
-    - ReadWriteMany
-  storageClassName: ""
-  resources:
-    requests:
-      storage: 1Mi
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: appdata
+#   #namespace: default
+# spec:
+#   storageClassName: data
+#   capacity:
+#     storage: 1Mi
+#   accessModes:
+#     - ReadWriteMany
+#   persistentVolumeReclaimPolicy: Retain
+#   nfs:
+#     server: 192.168.1.2
+#     path: "/volume1/network-storage"
+#   mountOptions:
+#     - nfsvers=4.2
+#     - tcp
+#     - intr
+#     - hard
+#     - noatime
+#     - nodiratime
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: appdata-pvc
+#   namespace: default
+# spec:
+#   accessModes:
+#     - ReadWriteMany
+#   storageClassName: ""
+#   resources:
+#     requests:
+#       storage: 1Mi
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
