--- a/kubernetes/apps/default/storage/app/pvc.yaml
+++ b/kubernetes/apps/default/storage/app/pvc.yaml
@@ -39,8 +39,8 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: test-claim
-  annotations:
-    nfs.io/storage-path: "test" # not required, depending on whether this annotation was shown in the storage class description
+  # annotations:
+  #   nfs.io/storage-path: "test" # not required, depending on whether this annotation was shown in the storage class description
 spec:
   storageClassName: nfs-provisioner
   accessModes:
