--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - ./kube-vip/ks.yaml
   - ./metrics-server/ks.yaml
   - ./reloader/ks.yaml
-  - ./nfs-subdir-external-provisioner/ks.yaml
+  #- ./nfs-subdir-external-provisioner/ks.yaml
