--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
   - ./weave-gitops/ks.yaml
   - ./whoami/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
-  #- ./storage/ks.yaml
-  #- ./filebrowser/ks.yaml
+  - ./storage/ks.yaml
+ #- ./filebrowser/ks.yaml
