--- a/kubernetes/apps/default/filebrowser/app/helm-release.yaml
+++ b/kubernetes/apps/default/filebrowser/app/helm-release.yaml
@@ -59,7 +59,7 @@ spec:
     persistence:
       data:
         enabled: true
-        existingClaim: nfs-data-pvc
+        existingClaim: appdata-pvc
         mountPath: /
     # ingress:
     #   main:
