--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - ./kube-vip/ks.yaml
   - ./metrics-server/ks.yaml
   - ./reloader/ks.yaml
-  - ./csi-driver-nfs.yaml/ks.yaml
+  - ./csi-driver-nfs/ks.yaml
   #- ./nfs-subdir-external-provisioner/ks.yaml
