--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -7,4 +7,5 @@ resources:
   - ./metrics-server/ks.yaml
   - ./reloader/ks.yaml
   - ./csi-driver-nfs/ks.yaml
+  - nfs
   #- ./nfs-subdir-external-provisioner/ks.yaml
