--- a/kubernetes/apps/default/filebrowser/app/ingress-route.yaml
+++ b/kubernetes/apps/default/filebrowser/app/ingress-route.yaml
@@ -12,7 +12,7 @@ spec:
     - match: Host(`filebrowser.${SECRET_DOMAIN}`)
       kind: Rule
       services:
-        - name: whoami
+        - name: filebrowser
           port: 80
       middlewares:
         - name: traefik-middleware-chains-default
