--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   - ./kube-vip/ks.yaml
   - ./metrics-server/ks.yaml
   - ./reloader/ks.yaml
-  - ./csi-driver-nfs/ks.yaml
-  - nfs
-  #- ./nfs-subdir-external-provisioner/ks.yaml
+  #- ./csi-driver-nfs/ks.yaml
+  #- nfs
+  - ./nfs-subdir-external-provisioner/ks.yaml
