--- a/kubernetes/apps/kube-system/nfs-subdir-external-provisioner/app/helm-release.yaml
+++ b/kubernetes/apps/kube-system/nfs-subdir-external-provisioner/app/helm-release.yaml
@@ -30,23 +30,23 @@ spec:
       server: "192.168.1.2"
       path: "/volume1/network-storage"
     storageClass:
-      name: nfs-provision
-      defaultClass: true
-      pathPattern: "${.PVC.namespace}-${.PVC.name}"
----
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: nfs-provisioner
-  labels:
-    app.kubernetes.io/name: nfs-provisioner
-    kustomize.toolkit.fluxcd.io/substitute: disabled
-provisioner: nfs-provisioner
-reclaimPolicy: Retain
-parameters:
-  pathPattern: "${.PVC.namespace}/${.PVC.annotations.nfs.io/storage-path}"
-mountOptions:
-  - nfsvers=4
-  - nolock
-  - soft
-  - rw
+      defaultClass: false
+      # name: nfs-provision
+#       pathPattern: "${.PVC.namespace}-${.PVC.name}"
+# ---
+# apiVersion: storage.k8s.io/v1
+# kind: StorageClass
+# metadata:
+#   name: nfs-provisioner
+#   labels:
+#     app.kubernetes.io/name: nfs-provisioner
+#     kustomize.toolkit.fluxcd.io/substitute: disabled
+# provisioner: nfs-provisioner
+# reclaimPolicy: Retain
+# parameters:
+#   pathPattern: "${.PVC.namespace}/${.PVC.annotations.nfs.io/storage-path}"
+# mountOptions:
+#   - nfsvers=4
+#   - nolock
+#   - soft
+#   - rw
