--- a/kubernetes/apps/kube-system/storage/app/pvc.yaml
+++ b/kubernetes/apps/kube-system/storage/app/pvc.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: appdata
-  #namespace: default
+  name: nfs-data-pv
+  namespace: default
 spec:
   storageClassName: data
   capacity:
@@ -25,12 +25,12 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: appdata-pvc
+  name: nfs-data-pvc
   namespace: default
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: "data"
+  storageClassName: data
   resources:
     requests:
       storage: 1Mi
