--- a/kubernetes/apps/default/filebrowser/app/helm-release.yaml
+++ b/kubernetes/apps/default/filebrowser/app/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
       tag: latest
     env:
       TZ: "${TIMEZONE}"
-      FB_DATABASE: "/filebrowser/filebrowser.db"
+      # FB_DATABASE: "/filebrowser/filebrowser.db"
       FB_ROOT: "/"
       FB_LOG: "stdout"
       FB_NOAUTH: "true"
