--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -9,4 +9,4 @@ resources:
   #- ./csi-driver-nfs/ks.yaml
   #- nfs
   - ./nfs-subdir-external-provisioner/ks.yaml
-  - ./storage/ks.yaml
+  #- ./storage/ks.yaml
