--- a/kubernetes/apps/networking/traefik/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik/app/helmrelease.yaml
@@ -83,16 +83,6 @@ spec:
               sans:
                 - "*.${SECRET_DOMAIN}"
           stores: networking-default@kubernetescrd
-    logs:
-      general:
-        level: DEBUG
-      filePath: "/data/traefik/logs/traefik.log"
-      access:
-        enabled: true
-        fields:
-          headers:
-            names:
-              X-Forwarded-User: keep
     providers:
       kubernetesCRD:
         enabled: true
@@ -106,27 +96,29 @@ spec:
           enabled: false
     # rbac:
     #   enabled: true
-
     # serviceAccountName: traefik-ingress-controller
     globalArguments:
-      - "--entryPoints.web.address=:80/tcp"
-      - "--entryPoints.websecure.address=:443/tcp"
+      - --entryPoints.web.address=:80/tcp
+      - --entryPoints.websecure.address=:443/tcp
       - --entryPoints.web.forwardedHeaders.insecure
       - --entryPoints.websecure.forwardedHeaders.insecure
-      - "--api=true"
-      - "--ping=true"
-      - "--providers.kubernetescrd"
-      - "--providers.kubernetescrd.allowCrossNamespace=true"
-      - "--api.dashboard=true" #required for the dashboard
+      - --api=true
+      - --api.dashboard=true #required for the dashboard
       #- --api.insecure=true #only used in combination with api.dashboard=true. not recommended  https://doc.traefik.io/traefik/operations/dashboard/#insecure-mode
+      - --ping=true
+      - --providers.kubernetescrd
+      - --providers.kubernetescrd.allowCrossNamespace=true
       # - --providers.kubernetesingress.ingressclass=traefik
       #- --metrics.prometheus=true
       #- --metrics.prometheus.entryPoint=metrics
       - --accessLog=true
+      - --accesslog.filepath=/data/traefik/logs/access.log
       - --accesslog.fields.defaultmode=keep
       - --accesslog.fields.headers.defaultmode=keep
+      - --accesslog.fields.headers.names.X-Forwarded-User=keep
       - --log.level=DEBUG
-      - entryPoints.websecure.forwardedHeaders.trustedIPs=10.0.0.0/8,192.168.0.0/16,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,104.16.0.0/13,104.24.0.0/14,108.162.192.0/18,131.0.72.0/22,141.101.64.0/18,162.158.0.0/15,172.64.0.0/13,173.245.48.0/20,188.114.96.0/20,190.93.240.0/20,197.234.240.0/22,198.41.128.0/17,2400:cb00::/32,2606:4700::/32,2803:f800::/32,2405:b500::/32,2405:8100::/32,2a06:98c0::/29,2c0f:f248::/32"
+      - --log.filePath=/data/traefik/logs/traefik.log
+      - --entryPoints.websecure.forwardedHeaders.trustedIPs=10.0.0.0/8,192.168.0.0/16,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,104.16.0.0/13,104.24.0.0/14,108.162.192.0/18,131.0.72.0/22,141.101.64.0/18,162.158.0.0/15,172.64.0.0/13,173.245.48.0/20,188.114.96.0/20,190.93.240.0/20,197.234.240.0/22,198.41.128.0/17,2400:cb00::/32,2606:4700::/32,2803:f800::/32,2405:b500::/32,2405:8100::/32,2a06:98c0::/29,2c0f:f248::/32"
     additionalArguments:
       - --providers.kubernetescrd
       - "--providers.kubernetesingress.ingressendpoint.ip=${TRAEFIK_SERVICE_ADDR}"
