--- a/kubernetes/apps/default/filebrowser/app/pvc.yaml
+++ b/kubernetes/apps/default/filebrowser/app/pvc.yaml
@@ -22,17 +22,17 @@ spec:
     # - nodiratime
     # - tcp
     # - intr
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# volumeName: pv-filebrowser
-# metadata:
-#   name: pvc-filebrowser
-#   namespace: default
-# spec:
-#   accessModes:
-#     - ReadWriteMany
-#   storageClassName: ""
-#   resources:
-#     requests:
-#       storage: 1Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+volumeName: pv-filebrowser
+metadata:
+  name: pvc-filebrowser
+  namespace: default
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: ""
+  resources:
+    requests:
+      storage: 1Mi
