--- a/kubernetes/apps/networking/traefik/app/pvc.yaml
+++ b/kubernetes/apps/networking/traefik/app/pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pv-traefik
-  namespace: default
+  namespace: networking
 spec:
   storageClassName: ""
   capacity:
@@ -13,7 +13,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: 192.168.1.2
-    path: "/volume1/network-storage/traefik"
+    path: "/volume1/network-storage"
     readOnly: false
   mountOptions:
     - nfsvers=4.1
@@ -27,7 +27,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-traefik
-  namespace: default
+  namespace: networking
 spec:
   accessModes:
     - ReadWriteMany
