--- a/kubernetes/apps/default/filebrowser/app/helm-release.yaml
+++ b/kubernetes/apps/default/filebrowser/app/helm-release.yaml
@@ -59,11 +59,7 @@ spec:
     persistence:
       data:
         enabled: true
-        existingClaim: nfs-data-pvc
-      # filebrowser:
-      #   enabled: true
-      #   existingClaim: pvc-filebrowser
-
+        existingClaim: pvc-default
     # ingress:
     #   main:
     #     enabled: true
