--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - ./reloader/ks.yaml
   #- ./csi-driver-nfs/ks.yaml
   - ./nfs-subdir-external-provisioner/ks.yaml
-  #- ./storage/ks.yaml
+  - ./storage/ks.yaml
