--- a/kubernetes/apps/kube-system/storage/app/pvc-default.yaml
+++ b/kubernetes/apps/kube-system/storage/app/pvc-default.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-data-pv
+  name: pv-default
   namespace: default
 spec:
-  storageClassName: data
+  storageClassName: ""
   capacity:
     storage: 1Mi
   accessModes:
@@ -14,23 +14,25 @@ spec:
   nfs:
     server: 192.168.1.2
     path: "/volume1/network-storage"
+    readOnly: false
   mountOptions:
-    - nfsvers=3
-    - tcp
-    - intr
+    - nfsvers=4.1
     - hard
-    - noatime
-    - nodiratime
+    # - noatime
+    # - nodiratime
+    # - tcp
+    # - intr
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-data-pvc
+  name: pvc-default
   namespace: default
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: data
+  volumeName: pv-default
+  storageClassName: ""
   resources:
     requests:
       storage: 1Mi
