--- a/kubernetes/apps/networking/traefik/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik/app/helmrelease.yaml
@@ -45,10 +45,10 @@ spec:
       #   enabled: true
       plugins:
         enabled: true
-    # persistence:
-    #   data:
-    #     enabled: true
-    #     existingClaim: pvc-traefik
+    persistence:
+      data:
+        enabled: true
+        existingClaim: pvc-networking
     ingressClass:
       enabled: true
       isDefaultClass: true
