--- a/kubernetes/apps/kube-system/storage/app/kustomization.yaml
+++ b/kubernetes/apps/kube-system/storage/app/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: default
+#namespace: default
 resources:
-  - ./pvc.yaml
+  - ./pvc-default.yaml
+  - ./pvc-networking.yaml
