--- a/kubernetes/apps/kube-system/nfs-subdir-external-provisioner/app/helm-release.yaml
+++ b/kubernetes/apps/kube-system/nfs-subdir-external-provisioner/app/helm-release.yaml
@@ -4,8 +4,8 @@ kind: HelmRelease
 metadata:
   name: nfs-subdir-external-provisioner
   namespace: kube-system
-  labels:
-    kustomize.toolkit.fluxcd.io/substitute: "disabled"
+  # labels:
+  #   kustomize.toolkit.fluxcd.io/substitute: "disabled"
 spec:
   chart:
     spec:
