--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   - ./metrics-server/ks.yaml
   - ./reloader/ks.yaml
   #- ./csi-driver-nfs/ks.yaml
-  #- ./nfs-subdir-external-provisioner/ks.yaml
+  - ./nfs-subdir-external-provisioner/ks.yaml
   #- ./storage/ks.yaml
