--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -12,6 +12,6 @@ data:
   METALLB_INGRESS_ADDR: "192.168.1.99"
   TRAEFIK_SERVICE_ADDR: "192.168.1.95"
   NFS_SERVER_ADDR: "192.168.1.2"
-  NFS_SERVER_PATH: "/network-storage"
+  NFS_SERVER_PATH: "/volume1/network-storage"
   PROXMOX_ADDR: "192.168.1.7"
   PLEX_ADDR: "192.168.1.25"
