--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -11,4 +11,4 @@ resources:
   #- ./traefik-forward-auth/ks.yaml
   #- wildcard-certificate
   #- traefik-error-pages
-  #- ./authelia/ks.yaml
+  - ./authelia/ks.yaml
