--- a/kubernetes/apps/networking/authelia/app/env.yaml
+++ b/kubernetes/apps/networking/authelia/app/env.yaml
@@ -25,4 +25,4 @@ spec:
       AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_MEMORY: 1024
       AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_PARALLELISM: 8
       AUTHELIA_ACCESS_CONTROL_DEFAULT_POLICY: deny
-      AUTHELIA_ACCESS_CONTROL_RULES_DOMAIN:
+      #AUTHELIA_ACCESS_CONTROL_RULES_DOMAIN:
