--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -3,19 +3,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: networking
 resources:
-  - certificate.yaml
+  #- certificate.yaml
   - ingress-route.yaml
   - helm-release.yaml
-  #- pvc.yaml
 configMapGenerator:
   - name: authelia-configmap
     files:
       - ./config/configuration.yaml
 generatorOptions:
   disableNameSuffixHash: true
-# configMapGenerator:
-#   - name: authelia
-#     files:
-#       - config/configuration.yaml
-# generatorOptions:
-#   disableNameSuffixHash: true
